# infoviz

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: DATALICENSE.md  election-results_statistics-finland.csv  ilo_minimum-wage_2025-01-30.csv  weather-helsinki-lighthouse_fmi.csv
data/nuclear-warhead-inventories/: nuclear-warhead-inventories.csv  nuclear-warhead-inventories.metadata.json  readme.md
evaluation/: aalto-CUR-191967-3109380-1-en.csv  infoviz-evaluation.ipynb
notebooks/: axis-ranges.ipynb  creating-networks.ipynb  dimensionality-reduction.ipynb  heatmap.ipynb  helper.py  networks.ipynb  overplotting.ipynb  parallel_coordinates.ipynb  part-vs-whole.ipynb  pca.ipynb  reexpression.ipynb  small-multiples.ipynb  time-series.ipynb  visualizing_distributions.ipynb
src/infoviz/: __init__.py  utils.py
